--- a/restauranteweb/MenuNormal.html
+++ b/restauranteweb/MenuNormal.html
@@ -14,23 +14,24 @@
 <body>
     <section>
         <section>
-            <header class="header">
             <nav id="menuinicio">
-            <ul class="menu-horizontal">
-                <li><a href="Restaurante.html">Inicio</a></li>
-                <li><a href="Promociones.html">Promociones</a></li>
-                <li>
-                    <a href="Menu">Menu</a>
-                    <ul class="menu-vertical">
-                        <li><a href="MenuVegetariano.html">Vegetariano</a></li>
-                        <li><a href="MenuNormal.html">Nomal</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </header>
+                <ul class="menu-horizontal">
+                    <li><a href="Restaurante.html">Inicio</a></li>
+                    <li><a href="Promociones.html">Promociones</a></li>
+                    <li>
+                        <a href="Menu">Menu</a>
+                        <ul class="menu-vertical">
+                            <li><a href="MenuVegetariano.html">Vegetariano</a>
+                            <a href="MenuNormal.html">Normal</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
             <div id="menunormal"></div>
             <br>
             <center><h1>Menu normal</h1 </center>
+        <br>
+        <br>
         <br>
         <br>
         <div class="card">
@@ -114,7 +115,7 @@
         </div> 
     <section>
         <nav id="Contactos">
-            <center><li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
+            <center><li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
             <a href=""><h4>CONTACTOS</h4></a>
                 <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section></a>
                 <a href="https://www.facebook.com/"><section><i class='bx bxl-facebook-square'>https://www.facebook.com/</i></section></a>
@@ -124,5 +125,6 @@
         </center>
         </nav>
     </section>
+    
 </body>
 </html>
