--- a/restauranteweb/MenuVegetariano.html
+++ b/restauranteweb/MenuVegetariano.html
@@ -13,28 +13,27 @@
 </head>
 <body>
     
-<center>
+
     <section>
         <section>
-            <header class="header">
-                <nav id="menuinicio">    
+            <nav id="menuinicio">
                 <ul class="menu-horizontal">
                     <li><a href="Restaurante.html">Inicio</a></li>
                     <li><a href="Promociones.html">Promociones</a></li>
                     <li>
                         <a href="Menu">Menu</a>
                         <ul class="menu-vertical">
-                            <li><a href="MenuVegetariano.html">Vegetariano</a></li>
-                            <li><a href="MenuNormal.html">Nomal</a></li>
+                            <li><a href="MenuVegetariano.html">Vegetariano</a>
+                            <a href="MenuNormal.html">Normal</a></li>
                         </ul>
-                
                     </li>
                 </ul>
             </nav>
-            </header>
             <div id="MenuVegetariano"></div>
             <br>
-            <center><h1>Menu Vegetariano</h1></center>
+            <center><h2>Menu Vegetariano</h2></center>
+        <br>
+        <br>
         <br>
         <br>
      <div class="card">
@@ -57,7 +56,7 @@
                 <li>• Pimienta negra (opcional)</li>
                 <li>• Sal</li></p>
             <div class="link">
-                <a href="#">Valor: $2.500</a>
+                <a href="#">Valor: $3.500</a>
             </div>
         </div>
     </div>
@@ -123,7 +122,7 @@
                 <li>• 3 cucharadas de cilantro fresco, picado</li>
                 <li>• ½ taza (4 onzas) de queso parmesano rallado</li></p>
             <div class="link">
-                <a href="#">VALOR: 3.500</a>
+                 <a href="#">VALOR: 3.500</a>
             </div>
         </div>
     </div> 
@@ -131,13 +130,14 @@
     <br>
     <section>
         <nav id="Contactos">
-            <center><li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
-                <a href=""><h4>CONTACTOS</h4></a>
-                <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section></a>
+            <center>
+            <li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
+            <a href=""><h4>CONTACTOS</h4></a>
+            <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section></a>
             <a href="https://www.facebook.com/"><section><i class='bx bxl-facebook-square'>https://www.facebook.com/</i></section></a>
             <a href="https://www.twitter.com/"><section><i class='bx bxl-twitter' ></i>https://www.twitter.com/</section></a>
             <a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><section><i class='bx bxs-location-plus'></i>https://www.googlemaps.</section></a>
-        </li>
+            </li>
         </center>
         </nav>
     </section>
