--- a/Reserva.html
+++ b/Reserva.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link type="text/js" rel="stylesheet" href="javascript/Formulario.js">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <title>Reserva</title>
 </head>
 <body>
