--- a/Promociones.html
+++ b/Promociones.html
@@ -14,22 +14,21 @@
         <section>
             <section>
                 <nav id="menuinicio">
-                    <ul class="menu-horizontal">
-                      <header>
+                <ul class="menu-horizontal">
+                    <header>
                         <li><a href="Restaurante.html">Inicio</a></li>
                         <li><a href="Promociones.html">Promociones</a></li>
                         <li>
                             <a href="#">Menu</a>
                             <ul class="menu-vertical">
                                 <li><a href="MenuVegetariano.html">Vegetariano</a>
-                                <a href="MenuNormal.html">Normal</a></li>
+                                    <a href="MenuNormal.html">Normal</a>
+                                </li>
                             </ul>
-                        </li>
                         <li><a href="Contacto.html">Contacto</a></li>
                         <li><a href="Reserva.html">Reserva</a></li>
-                      </header>
-                      </ul>
-                </nav>
+                    </header>
+            </nav>
                 <br>
                 <br>
                 <br>
