--- a/Reserva.html
+++ b/Reserva.html
@@ -39,10 +39,10 @@
                 <br>
             <nav class="formulario">
             <form action="#" method="post" >
-            <p>Nombre: <input type="text" name="nombre" placeholder="Escriba su nombre" required></p>
+            <p>Nombre: <input type="text" name="nombre" placeholder="Escriba su nombre" ></p>
             <br>
                 <p>Apellidos:
-                <input type="text" name="apellidos" size="40" placeholder="Escriba sus dos apellidos" required>
+                <input type="text" name="apellidos" size="40" placeholder="Escriba sus dos apellidos" >
               </p>
               <br>
             <p>Sexo:
@@ -50,17 +50,17 @@
             <input type="radio" name="hm" value="m" required> Mujer </p>
             <br>
             <br>
-            Fecha: <input type="date" name="fecha"  required>
+            Fecha: <input type="date" name="fecha"  >
             <br>
             <br>
             <br>
-            Hora: <input type="time" name="hora" required>
+            Hora: <input type="time" name="hora" >
             <br>
             <br>
             <br>
             <p> Telefono:
             <input name="phone" placeholder="teléfono (9 dígitos)" 
-            type="text" pattern="^[9|8|7|6]\d{8}$" required>  
+            type="text" pattern="^[9|8|7|6]\d{8}$" >  
             </p> 
             <br>
             <br>
