--- a/Reserva.html
+++ b/Reserva.html
@@ -35,24 +35,24 @@
             <br>
             <ul class="formulario">
             <form action="#" method="post" >
-            Nombre: <input type="text" name="nombre" placeholder="Escriba su nombre" required>
+            Nombre: <input type="text" name="nombre" placeholder="Escriba su nombre">
             <br>
             <br>
             Apellidos:
-            <input type="text" name="apellidos" size="40" placeholder="Escriba sus dos apellidos" required>
+            <input type="text" name="apellidos" size="40" placeholder="Escriba sus dos apellidos">
             <br>
             <br>
-            Fecha: <input type="date" name="fecha"  required>
+            Fecha: <input type="date" name="fecha" >
             <br>
             <br>
             <br>
-            Hora: <input type="time" name="hora" required>
+            Hora: <input type="time" name="hora" >
             <br>
             <br>
             <br>
             Telefono:
             <input name="phone" placeholder="teléfono (9 dígitos)" 
-            type="text" pattern="^[9|8|7|6]\d{8}$" required>  
+            type="text" pattern="^[9|8|7|6]\d{8}$">  
               <br>
               <br>
             Cantidad de Personas:
