--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
             </nav>
             <br>
             <nav class="parrafo">
-                <p>Somos una cadena de restaurantes familiar localisada en xxxxxxx</p>
+                <p>Somos una cadena de restaurantes familiar localisada en </p> 
             </nav>
         </section>
         <nav id="RedesSociales">
                 <li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
-                    <a href=""><h4>Redes Sociales</h4>
-                    </a>
+                    <a href=""><h4>Redes Sociales</h4></a>
                     <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section>
                     </a>
                     <a href="https://www.facebook.com/"><section><i class='bx bxl-facebook-square'></i>https://www.facebook.com/</section>
@@ -60,5 +59,4 @@
         </nav>
     </div>
 </body>
-
 </html>
