--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li><a href="Reserva.html">Reserva</a></li>
                     </header>
             </nav>
-            <center><img id="logo" src="img/logo.png" alt=""></center>
+            <img id="logo" src="img/logo.png" alt="">
             <br>
            <nav class="titulo">
                 <h3>¿Quienes somos?</h3>
