--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                         <li><a href="Reserva.html">Reserva</a></li>
                     </header>
             </nav>
+            <nav class="logo">
             <img id="logo" src="img/logo.png" alt="">
+        </nav>
             <br>
            <nav class="titulo">
                 <h3>¿Quienes somos?</h3>
