--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
                                     <a href="MenuNormal.html">Normal</a>
                                 </li>
                             </ul>
+                        
                         <li><a href="Contacto.html">Contacto</a></li>
                         <li><a href="Reserva.html">Reserva</a></li>
                     </header>
-            </nav>
+                </ul>
+            </div>
+                </nav>
             <nav class="logo">
             <img id="logo" src="img/logo.png" alt="">
         </nav>
@@ -46,9 +49,14 @@
                 <p>Somos una cadena de restaurantes familiar localisada en </p> 
             </nav>
         </section>
-        <nav id="RedesSociales">
-                <li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
-                    <a href=""><h4>Redes Sociales</h4></a>
+
+    <section>
+        <br>
+        <footer>
+            <nav id="RedesSociales">
+                <br>
+            <a href=""><h4>Redes Sociales</h4></a>
+            <br>
                     <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section>
                     </a>
                     <a href="https://www.facebook.com/"><section><i class='bx bxl-facebook-square'></i>https://www.facebook.com/</section>
@@ -57,8 +65,9 @@
                     </a>
                     <a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><section><i class='bx bxs-location-plus'></i>https://www.googlemaps.</section>
                     </a>
-                </li>
-        </nav>
-    </div>
+            </nav>
+        </footer>
+    </section>
+    
 </body>
 </html>
