--- a/MenuNormal.html
+++ b/MenuNormal.html
@@ -12,7 +12,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
 </head>
 <body>
-    <section>
         <section>
             <nav id="menuinicio">
                 <ul class="menu-horizontal">
@@ -120,18 +119,21 @@
                     <a href="#">VALOR: 6.990</a>
                 </div>
             </div>
-        </div> 
-    <section>
-        <nav id="RedesSociales">
-            <li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
-            <a href=""><h4>Redes Sociales</h4></a>
-                <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section></a>
-                <a href="https://www.facebook.com/"><section><i class='bx bxl-facebook-square'>https://www.facebook.com/</i></section></a>
-                <a href="https://www.twitter.com/"><section><i class='bx bxl-twitter' ></i>https://www.twitter.com/</section></a>
-                <a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><section><i class='bx bxs-location-plus'></i>https://www.googlemaps.</section></a>
-            </ul>
-        </nav>
-    </section>
+        </div>
+        </section> 
+        <section>
+            <footer>
+                <nav id="RedesSociales">
+                    <br>
+                    <a href=""><h4>Redes Sociales</h4></a>
+                    <br>
+                    <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section></a>
+                    <a href="https://www.facebook.com/"><section><i class='bx bxl-facebook-square'></i>https://www.facebook.com/</i></section></a>
+                    <a href="https://www.twitter.com/"><section><i class='bx bxl-twitter' ></i>https://www.twitter.com/</section></a>
+                    <a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><section><i class='bx bxs-location-plus'></i>https://www.googlemaps.</section></a>
+                </nav>
+            </footer>
+            </section> 
     
 </body>
 </html>
