--- a/Promociones.html
+++ b/Promociones.html
@@ -17,7 +17,7 @@
                 <nav id="menuinicio">
                     <ul class="menu-horizontal">
                       <header>
-                        <li><a href="Restaurante.html">Inicio</a></li>
+                        <li><a href="inde.html">Inicio</a></li>
                         <li><a href="Promociones.html">Promociones</a></li>
                         <li>
                             <a href="#">Menu</a>
