--- a/MenuNormal.html
+++ b/MenuNormal.html
@@ -16,7 +16,7 @@
             <nav id="menuinicio">
                 <ul class="menu-horizontal">
                     <header>
-                    <li><a href="Restaurante.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="Promociones.html">Promociones</a></li>
                     <li>
                         <a href="#">Menu</a>
