--- a/MenuVegetariano.html
+++ b/MenuVegetariano.html
@@ -20,7 +20,7 @@
             <nav id="menuinicio">
                 <ul class="menu-horizontal">
                     <header>
-                    <li><a href="Restaurante.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="Promociones.html">Promociones</a></li>
                     <li>
                         <a href="#">Menu</a>
@@ -134,12 +134,11 @@
                  <a href="#">VALOR: 3.500</a>
             </div>
         </div>
-    </div> 
-    <br>
-    <br>
-    <section>
+    </div>
+        </section>
+    </section>
+            <nav id="RedesSociales"></nav> 
         <footer>
-            <nav id="RedesSociales">
                 <br>
                 <a href=""><h4>Redes Sociales</h4></a>
                 <br>
@@ -147,8 +146,6 @@
                 <a href="https://www.facebook.com/"><section><i class='bx bxl-facebook-square'></i>https://www.facebook.com/</i></section></a>
                 <a href="https://www.twitter.com/"><section><i class='bx bxl-twitter' ></i>https://www.twitter.com/</section></a>
                 <a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><section><i class='bx bxs-location-plus'></i>https://www.googlemaps.</section></a>
-            </nav>
-        </footer>
-        </section> 
+            </footer>
 </body>
 </html>
