--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul class="menu-horizontal">
                     <header>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="Promociones.html">Promociones</a></li>
+                        <li><a href="">Promociones</a></li>
                         <li>
                             <a href="#">Menu</a>
                             <ul class="menu-vertical">
@@ -34,6 +34,13 @@
                         
                         <li><a href="Contacto.html">Contacto</a></li>
                         <li><a href="Reserva.html">Reserva</a></li>
+                          <div class="container-fluid">
+                            <form class="form-inline my-2 my-lg-0">
+                              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                          </div>
+                       
                     </header>
                 </ul>
             </div>
@@ -50,8 +57,8 @@
                 <p>Somos una cadena de restaurantes familiar localisada en </p> 
             </nav>
         </section>
-        <section>
             <div class="container">
+              <section id="Promociones">
                 <nav class="titulo"><h1>Promociones</h1></nav>
                 <br>
                 <br>
@@ -90,17 +97,15 @@
                     <span class="glyphicon glyphicon-chevron-right"></span>
                     <span class="sr-only">Next</span>
                   </a>
+                </section>
                 </div>
               </div>
-        </section>
     <section>
         <br>
         <footer>
             <nav id="RedesSociales">
-            </nav>
                 <br>
-            <a href=""><h4>Redes Sociales</h4></a>
-
+            <h4>Redes Sociales</h4></a>
             <br>
                     <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section>
                     </a>
@@ -110,6 +115,7 @@
                     </a>
                     <a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><section><i class='bx bxs-location-plus'></i>https://www.googlemaps.</section>
                     </a>
+                  </nav>
         </footer>
     </section>
             <!--script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script-->
