--- a/Contacto.html
+++ b/Contacto.html
@@ -26,7 +26,7 @@
                     </li>
                     <li><a href="Contacto.html">Contacto</a></li>
                     <li><a href="Reserva.html">Reserva</a></li>
-                    <li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</li>
+                    <li><a href="InicioSeccion.html">Inicio de seccion</a></li>
             </nav>
             <div id="menunormal"></div>
         </section>
