--- a/MenuVegetariano.html
+++ b/MenuVegetariano.html
@@ -20,7 +20,7 @@
             <nav id="menuinicio">
                 <ul class="menu-horizontal">
                     <header>
-                    <li><a href="Restaurante.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="Promociones.html">Promociones</a></li>
                     <li>
                         <a href="#">Menu</a>
@@ -31,6 +31,7 @@
                     </li>
                     <li><a href="Contacto.html">Contacto</a></li>
                     <li><a href="Reserva.html">Reserva</a></li>
+                    <li id="inicioseccion"><a href="InicioSeccion.html">Inicio</a></li>
                 </header>
                 </nav>
 
