--- a/Promociones.html
+++ b/Promociones.html
@@ -13,22 +13,23 @@
 <body>
         <section>
             <section>
-                <nav id="menuinicio">
+              <nav id="menuinicio">
                 <ul class="menu-horizontal">
-                    <header>
-                        <li><a href="Restaurante.html">Inicio</a></li>
-                        <li><a href="Promociones.html">Promociones</a></li>
-                        <li>
-                            <a href="#">Menu</a>
-                            <ul class="menu-vertical">
-                                <li><a href="MenuVegetariano.html">Vegetariano</a>
-                                    <a href="MenuNormal.html">Normal</a>
-                                </li>
-                            </ul>
-                        <li><a href="Contacto.html">Contacto</a></li>
-                        <li><a href="Reserva.html">Reserva</a></li>
-                    </header>
-            </nav>
+                <header>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Promociones.html">Promociones</a></li>
+                    <li>
+                        <a href="#">Menu</a>
+                        <ul class="menu-vertical">
+                            <li><a href="MenuVegetariano.html">Vegetariano</a>
+                            <a href="MenuNormal.html">Normal</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="Contacto.html">Contacto</a></li>
+                    <li><a href="Reserva.html">Reserva</a></li>
+                    <li><a href="InicioSeccion.html">Inicio de seccion</a></li>
+                </header>
+                </nav>
                 <br>
                 <br>
                 <br>
