--- a/Restaurante.html
+++ b/Restaurante.html
@@ -32,7 +32,7 @@
                             </ul>
                         <li><a href="Contacto.html">Contacto</a></li>
                         <li><a href="Reserva.html">Reserva</a></li>
-                        <li><a href="InicioSeccion.html">Iniciar</a></li>
+                        <li id="inicioseccion"><a href="InicioSeccion.html">Iniciar secion</a></li>
                     </header>
             </nav>
             <center><img id="logo" src="img/logo.png" alt=""></center>
