--- a/Reserva.html
+++ b/Reserva.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link type="text/js" rel="stylesheet" href="javascript/Formulario.js">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <title>Reserva</title>
 </head>
 <body>
@@ -16,7 +15,7 @@
             <nav id="menuinicio">
                 <ul class="menu-horizontal">
                     <header>
-                    <li><a href="Restaurante.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="Promociones.html">Promociones</a></li>
                     <li>
                         <a href="#">Menu</a>
@@ -27,6 +26,7 @@
                     </li>
                     <li><a href="Contacto.html">Contacto</a></li>
                     <li><a href="Reserva.html">Reserva</a></li>
+                    <li id="inicioseccion"><a href="InicioSeccion.html">Inicio</a></li>
                 </header>
                 </ul>
             </nav>
@@ -39,10 +39,10 @@
                 <br>
             <nav class="formulario">
             <form action="#" method="post" >
-            <p>Nombre: <input type="text" name="nombre" placeholder="Escriba su nombre" ></p>
+            <p>Nombre: <input type="text" name="nombre" placeholder="Escriba su nombre" required></p>
             <br>
                 <p>Apellidos:
-                <input type="text" name="apellidos" size="40" placeholder="Escriba sus dos apellidos" >
+                <input type="text" name="apellidos" size="40" placeholder="Escriba sus dos apellidos" required>
               </p>
               <br>
             <p>Sexo:
@@ -50,17 +50,17 @@
             <input type="radio" name="hm" value="m" required> Mujer </p>
             <br>
             <br>
-            Fecha: <input type="date" name="fecha"  >
+            Fecha: <input type="date" name="fecha"  required>
             <br>
             <br>
             <br>
-            Hora: <input type="time" name="hora" >
+            Hora: <input type="time" name="hora" required>
             <br>
             <br>
             <br>
             <p> Telefono:
             <input name="phone" placeholder="teléfono (9 dígitos)" 
-            type="text" pattern="^[9|8|7|6]\d{8}$" >  
+            type="text" pattern="^[9|8|7|6]\d{8}$" required>  
             </p> 
             <br>
             <br>
