--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         
                         <li><a href="Contacto.html">Contacto</a></li>
                         <li><a href="Reserva.html">Reserva</a></li>
+                        <li><a href="InicioSeccion.html">inicioseccion</a></li>
                           <div class="container-fluid">
                             <form class="form-inline my-2 my-lg-0">
                               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
