--- a/Promociones.html
+++ b/Promociones.html
@@ -28,6 +28,7 @@
                         </li>
                         <li><a href="Contacto.html">Contacto</a></li>
                         <li><a href="Reserva.html">Reserva</a></li>
+                        <li><a href="InicioSeccion.html">inicioseccion</a></li>
                       </header>
                       </ul>
                 </nav> 
