--- a/MenuVegetariano.html
+++ b/MenuVegetariano.html
@@ -31,6 +31,7 @@
                     </li>
                     <li><a href="Contacto.html">Contacto</a></li>
                     <li><a href="Reserva.html">Reserva</a></li>
+                    <li><a href="InicioSeccion.html">inicioseccion</a></li>
                 </header>
                 </nav>
 
