--- a/MenuNormal.html
+++ b/MenuNormal.html
@@ -29,6 +29,7 @@
                     </li>
                     <li><a href="Contacto.html">Contacto</a></li>
                     <li><a href="Reserva.html">Reserva</a></li>
+                    <li><a href="InicioSeccion.html">inicioseccion</a></li>
                 </header>
                 </nav>
             <div id="menunormal"></div>
