--- a/InicioSeccion.html
+++ b/InicioSeccion.html
@@ -25,6 +25,7 @@
                     </li>
                     <li><a href="Contacto.html">Contacto</a></li>
                     <li><a href="Reserva.html">Reserva</a></li>
+                    <li><a href="InicioSeccion.html">inicioseccion</a></li>
                 </header>
                 </nav>
         <section>
