--- a/Contacto.html
+++ b/Contacto.html
@@ -27,6 +27,7 @@
                     </li>
                     <li><a href="Contacto.html">Contacto</a></li>
                     <li><a href="Reserva.html">Reserva</a></li>
+                    <li><a href="InicioSeccion.html">inicioseccion</a></li>
                     <li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</li>
             </nav>
             <div id="menunormal"></div>
