--- a/MenuNormal.html
+++ b/MenuNormal.html
@@ -14,24 +14,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
 </head>
 <body>
+        <div id="menu">
         <section>
             <nav id="menuinicio">
                 <ul class="menu-horizontal">
                     <header>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="Promociones.html">Promociones</a></li>
-                    <li>
-                        <a href="#">Menu</a>
-                        <ul class="menu-vertical">
-                            <li><a href="MenuVegetariano.html">Vegetariano</a>
-                                <a href="MenuNormal.html">Normal</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="Contacto.html">Contacto</a></li>
-                    <li><a href="Reserva.html">Reserva</a></li>
-                    <li><a href="InicioSeccion.html">inicioseccion</a></li>
-                </header>
-                </nav>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="">Promociones</a></li>
+                        <li>
+                            <a href="#">Menu</a>
+                            <ul class="menu-vertical">
+                                <li><a href="MenuVegetariano.html">Vegetariano</a>
+                                    <a href="MenuNormal.html">Normal</a>
+                                </li>
+                            </ul>
+                        
+                        <li><a href="Contacto.html">Contacto</a></li>
+                        <li><a href="Reserva.html">Reserva</a></li>
+                        <li><a href="InicioSeccion.html">inicioseccion</a></li>
+                          <div class="container-fluid">
+                            <form class="form-inline my-2 my-lg-0">
+                              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                          </div>
+                        </li>
+                    </header>
+                </ul>
+              </nav>
+        </section>
+            </div>
             <div id="menunormal"></div>
             <br>
             <nav class="titulo">
