--- a/Contacto.html
+++ b/Contacto.html
@@ -4,35 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <title>Contacto</title>
 </head>
 <body>
-    <section>
+    <div id="menu">
         <section>
             <nav id="menuinicio">
                 <ul class="menu-horizontal">
                     <header>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="Promociones.html">Promociones</a></li>
-                    <li>
-                        <a href="#">Menu</a>
-                        <ul class="menu-vertical">
-                            <li><a href="MenuVegetariano.html">Vegetariano</a>
-                                <a href="MenuNormal.html">Normal</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="Contacto.html">Contacto</a></li>
-                    <li><a href="Reserva.html">Reserva</a></li>
-                    <li><a href="InicioSeccion.html">inicioseccion</a></li>
-                    <li>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</li>
-            </nav>
-            <div id="menunormal"></div>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="">Promociones</a></li>
+                        <li>
+                            <a href="#">Menu</a>
+                            <ul class="menu-vertical">
+                                <li><a href="MenuVegetariano.html">Vegetariano</a>
+                                    <a href="MenuNormal.html">Normal</a>
+                                </li>
+                            </ul>
+                        
+                        <li><a href="Contacto.html">Contacto</a></li>
+                        <li><a href="Reserva.html">Reserva</a></li>
+                        <li><a href="InicioSeccion.html">inicioseccion</a></li>
+                          <div class="container-fluid">
+                            <form class="form-inline my-2 my-lg-0">
+                              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                          </div>
+                        </li>
+                    </header>
+                </ul>
+              </nav>
         </section>
-    </section>
+            </div>
     <br>
     <br>
     <br>
@@ -72,5 +81,10 @@
             </nav>
         </footer>
         </section>
+            <!--script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script-->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+            <!--script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script-->
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
