--- a/Reserva.html
+++ b/Reserva.html
@@ -39,7 +39,7 @@
                             </form>
                           </div>
                         <nav class="inicioseccion">
-                            <a href="InicioSeccion.html"><img src="img/icons8-usuario-64.png" alt=""></a>
+                            <button class="btn btn-outline-success my-2 my-sm-0"><a href="Registrar.html"><img src="img/icons8-usuario-64.png" alt=""></a></button>
                         </nav>
                         </li>
                     </header>
@@ -48,26 +48,20 @@
         </section>
             </div>
             <br>
-            <br>
-            <br>
             <main>
+                <nav class="titulo">
                 <h2>Reserva</h2><p></p>
+            </nav>
             <br>
             <ul class="formulario">
             <form action="#" method="post" >
             Nombre: <input type="text" name="nombre" placeholder="Escriba su nombre">
             <br>
             <br>
-            Apellidos:
-            <input type="text" name="apellidos" size="40" placeholder="Escriba sus dos apellidos">
-            <br>
-            <br>
             Fecha: <input type="date" name="fecha" >
             <br>
             <br>
-            <br>
             Hora: <input type="time" name="hora" >
-            <br>
             <br>
             <br>
             Telefono:
@@ -86,14 +80,11 @@
                   </select>
                   <br>
                   <br>
-                  <br>
             Deje su mensaje:
-                <br>
                 <br>
                 <br>
                   <textarea name="message" placeholder="Deje un comentario" ></textarea>
                   <br>
-                <br>
                 <br>
                 <input type="reset" value="Limpiar">
                 <input type="submit" value="Enviar">
@@ -105,7 +96,7 @@
         <footer>
             <nav id="RedesSociales">
                 <br>
-                <a href=""><h4>Redes Sociales</h4></a>
+                <h4>Redes Sociales</h4></a>
                 <br>
                 <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section></a>
                 <a href="https://www.facebook.com/"><section><i class='bx bxl-facebook-square'></i>https://www.facebook.com/</i></section></a>
@@ -113,7 +104,7 @@
                 <a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><section><i class='bx bxs-location-plus'></i>https://www.googlemaps.</section></a>
             </nav>
         </footer>
-                <!--script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script-->
+            <!--script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script-->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
             <!--script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script-->
