--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
                         
                         <li><a href="Contacto.html">Contacto</a></li>
                         <li><a href="Reserva.html">Reserva</a></li>
-                        <li><a href="InicioSeccion.html">inicioseccion</a></li>
                           <div class="container-fluid">
                             <form class="form-inline my-2 my-lg-0">
                               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                             </form>
                           </div>
-                       
+                          <nav class="inicioseccion">
+                            <button class="btn btn-outline-success my-2 my-sm-0"><a href="Registrar.html"><img src="img/icons8-usuario-64.png" alt=""></a></button>
+                        </nav>
+                        </li>
                     </header>
                 </ul>
             </div>
