--- a/InicioSeccion.html
+++ b/InicioSeccion.html
@@ -17,7 +17,6 @@
                 <ul class="menu-horizontal">
                     <header>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="">Promociones</a></li>
                         <li>
                             <a href="#">Menu</a>
                             <ul class="menu-vertical">
@@ -67,7 +66,7 @@
                     </div>
                     <div class="formulario__grupo formulario__grupo-btn-enviar">
                         <button type="submit" class="formulario__btn">Enviar</button>
-                        <button type="reset" class="formulario_btn">Borrar</button>
+                        <button type="reset" class="formulario__btn">Eliminar</button>
                         <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
                     </div>
                 </form>
