--- a/Reserva.html
+++ b/Reserva.html
@@ -21,7 +21,6 @@
                 <ul class="menu-horizontal">
                     <header>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="">Promociones</a></li>
                         <li>
                             <a href="#">Menu</a>
                             <ul class="menu-vertical">
@@ -86,8 +85,9 @@
                   <textarea name="message" placeholder="Deje un comentario" ></textarea>
                   <br>
                 <br>
-                <input type="reset" value="Limpiar">
-                <input type="submit" value="Enviar">
+    <button type="submit" class="formulario__btn">Enviar</button>
+    <br>
+    <button type="reset" class="formulario__btn">Eliminar</button>
             </form>
         </ul>
         </main>
