--- a/Registrar.html
+++ b/Registrar.html
@@ -17,7 +17,6 @@
                 <ul class="menu-horizontal">
                     <header>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="">Promociones</a></li>
                         <li>
                             <a href="#">Menu</a>
                             <ul class="menu-vertical">
@@ -106,16 +105,15 @@
                         <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
                     </div>
                     <br>
-                        <input type="reset" value="Limpiar"> 
-                        <br>
-                        <input type="submit" value="Enviar">
+                    <button type="submit" class="formulario__btn">Enviar</button>
+                    <br>
+                    <button type="reset" class="formulario__btn">Eliminar</button>
                         <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
                         <br>
-                        <div class="buttonR">
-                        <input type=""><a href="InicioSeccion.html">Iniciar Seccion</a></button>
-                    </div>
-                </form>
-            </main>	
+                  </form>
+                  <br>
+                  <a href="InicioSeccion.html"><button class="formulario__btn">Inicio</button></a>
+                    </main>	
             <script src="js/formulario.js"></script>
             <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
         </section>
