--- a/Registrar.html
+++ b/Registrar.html
@@ -105,14 +105,14 @@
                         <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
                     </div>
                     <br>
-                    <button type="submit" class="formulario__btn">Enviar</button>
+                    <button type="submit" class="formulario__btn">Registrar</button>
                     <br>
                     <button type="reset" class="formulario__btn">Eliminar</button>
-                        <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
+                        <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Registro exitosamente!</p>
                         <br>
                   </form>
                   <br>
-                  <a href="InicioSeccion.html"><button class="formulario__btn">Inicio</button></a>
+                  <a href="InicioSeccion.html"><button class="formulario__btn">Iniciar Seccion</button></a>
                     </main>	
             <script src="js/formulario.js"></script>
             <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
