--- a/InicioSeccion.html
+++ b/InicioSeccion.html
@@ -66,9 +66,9 @@
                         <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
                     </div>
                     <div class="formulario__grupo formulario__grupo-btn-enviar">
-                        <button type="submit" class="formulario__btn">Enviar</button>
-                        <button type="reset" class="formulario_btn">Borrar</button>
-                        <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
+                        <button type="submit" class="formulario__btn">Iniciar Seccion</button>
+                        <a href="Registrar.html"><button type="reset" class="formulario__btn">Registrarse</a></button>
+                        <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Inicio de seccion exitosamente!</p>
                     </div>
                 </form>
             </main>	
