--- a/Registrar.html
+++ b/Registrar.html
@@ -106,13 +106,10 @@
                         <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b> Por favor rellena el formulario correctamente. </p>
                     </div>
                     <br>
-                    <input type="reset" value="Limpiar"> 
+                    <button type="submit" class="formulario__btn">Registrar</button>
                     <br>
-                    <input type="submit" value="Enviar">
-                    <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
-                    <br>
-                    <div class="buttonR">
-                    <input type=""><a href="InicioSeccion.html">Iniciar Seccion</a></button>
+                    <button type="reset" class="formulario__btn">Eliminar</button>
+                        <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Registro exitosamente!</p>
                     </div>
                 </form>
             </main>	
