--- a/Registrar.html
+++ b/Registrar.html
@@ -17,7 +17,6 @@
                 <ul class="menu-horizontal">
                     <header>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="">Promociones</a></li>
                         <li>
                             <a href="#">Menu</a>
                             <ul class="menu-vertical">
@@ -110,9 +109,11 @@
                     <br>
                     <button type="reset" class="formulario__btn">Eliminar</button>
                         <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Registro exitosamente!</p>
-                    </div>
-                </form>
-            </main>	
+                        <br>
+                  </form>
+                  <br>
+                  <a href="InicioSeccion.html"><button class="formulario__btn">Iniciar Seccion</button></a>
+                    </main>	
             <script src="js/formulario.js"></script>
             <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
         </section>
