--- a/Registrar.html
+++ b/Registrar.html
@@ -107,7 +107,7 @@
                     <br>
                     <button type="submit" class="formulario__btn">Registrar</button>
                     <br>
-                    <button type="reset" class="formulario__btn">Eliminar</button>
+                    <button type="reset" class="formulario__btn">Limpiar</button>
                         <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Registro exitosamente!</p>
                         <br>
                   </form>
