--- a/InicioSeccion.html
+++ b/InicioSeccion.html
@@ -44,6 +44,7 @@
             </div>
         <section>
             <main>
+                <div class="container">
                 <form action="" class="formulario" id="formulario">
                     <div class="formulario__grupo" id="grupo__correo">
                         <label for="correo" class="formulario__label">Correo Electrónico</label>
@@ -66,20 +67,22 @@
                     </div>
                     <div class="formulario__grupo formulario__grupo-btn-enviar">
                         <button type="submit" class="formulario__btn">Iniciar Seccion</button>
-                        <a href="Registrar.html"><button type="reset" class="formulario__btn">Registrarse</a></button>
                         <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Inicio de seccion exitosamente!</p>
                     </div>
                 </form>
+                <a href="Registrar.html"><button class="formulario__btn">Registrarse</button></a>
+                </div>
             </main>	
             <script src="js/formulario.js"></script>
             <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
         </section>
+        
     <section>
         <br>
         <footer>
             <nav id="RedesSociales">
                 <br>
-            <h4>Redes Sociales</h4></a>
+            <h4>Redes Sociales</h4>
             <br>
                     <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section>
                     </a>
