--- a/Reserva.html
+++ b/Reserva.html
@@ -48,11 +48,12 @@
             </div>
             <br>
             <main>
+                <div class="container">
                 <nav class="titulo">
                 <h2>Reserva</h2><p></p>
             </nav>
             <br>
-            <ul class="formulario">
+            <ul class="formulario1">
             <form action="#" method="post" >
             Nombre: <input type="text" name="nombre" placeholder="Escriba su nombre">
             <br>
@@ -90,6 +91,7 @@
     <button type="reset" class="formulario__btn">Eliminar</button>
             </form>
         </ul>
+                </div>
         </main>
         <br>
         <br>
