--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>Somos una cadena de restaurantes familiar localisada en </p> 
             </nav>
         </section>
-            <div class="container">
+            <div class="container1">
               <section id="Promociones">
                 <nav class="titulo"><h1>Promociones</h1></nav>
                 <br>
