--- a/InicioSeccion.html
+++ b/InicioSeccion.html
@@ -11,6 +11,9 @@
     <title>Reserva</title>
 </head>
 <body>
+    <a href="https://api.whatsapp.com/send?phone=+56972525843" class="btn-wsp" target="_blank">
+	    <i class="fa fa-whatsapp icono"></i>
+	</a>
     <div id="menu">
         <section>
             <nav id="menuinicio">
