--- a/MenuNormal.html
+++ b/MenuNormal.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
 </head>
 <body>
+    <a href="https://api.whatsapp.com/send?phone=+56972525843" class="btn-wsp" target="_blank">
+	    <i class="fa fa-whatsapp icono"></i>
+	</a>
         <div id="menu">
         <section>
             <nav id="menuinicio">
