--- a/Contacto.html
+++ b/Contacto.html
@@ -18,6 +18,9 @@
     <title>Contacto</title>
 </head>
 <body>
+    <a href="https://api.whatsapp.com/send?phone=+56972525843" class="btn-wsp" target="_blank">
+	    <i class="fa fa-whatsapp icono"></i>
+	</a>
     <div id="menu">
         <section>
             <nav id="menuinicio">
