--- a/MenuVegetariano.html
+++ b/MenuVegetariano.html
@@ -15,6 +15,9 @@
     
 </head>
 <body>
+    <a href="https://api.whatsapp.com/send?phone=+56972525843" class="btn-wsp" target="_blank">
+	    <i class="fa fa-whatsapp icono"></i>
+	</a>
         <div id="menu">
         <section>
             <nav id="menuinicio">
