--- a/Reserva.html
+++ b/Reserva.html
@@ -12,9 +12,13 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     <title>Reserva</title>
 </head>
 <body>
+    <a href="https://api.whatsapp.com/send?phone=+56972525843" class="btn-wsp" target="_blank">
+	    <i class="fa fa-whatsapp icono"></i>
+	</a>
     <div id="menu">
         <section>
             <nav id="menuinicio">
