--- a/MenuVegetariano.html
+++ b/MenuVegetariano.html
@@ -12,7 +12,7 @@
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Volkhov:wght@700&display=swap" rel="stylesheet">
-    
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <a href="https://api.whatsapp.com/send?phone=+56972525843" class="btn-wsp" target="_blank">
