--- a/InicioSeccion.html
+++ b/InicioSeccion.html
@@ -19,7 +19,7 @@
         <section>
             <nav id="menuinicio">
                 <ul class="menu-horizontal">
-                    <nav class="header">
+                    <ul class="header">
                         <li><a href="index.html">Inicio</a></li>
                         <li>
                             <a href="#">Menu</a>
@@ -35,7 +35,7 @@
                             <button class="btn btn-outline-success my-2 my-sm-0"><a href="Registrar.html"><img src="img/icons8-usuario-64.png" alt=""></a></button>
                         </nav>
                         </li>
-                    </nav>
+                    </ul>
                 </ul>
               </nav>
         </section>
