--- a/Contacto.html
+++ b/Contacto.html
@@ -26,7 +26,7 @@
         <section>
             <nav id="menuinicio">
                 <ul class="menu-horizontal">
-                    <header>
+                    <ul class="header">
                         <li><a href="index.html">Inicio</a></li>
                         <li>
                             <a href="#">Menu</a>
@@ -42,7 +42,7 @@
                             <button class="btn btn-outline-success my-2 my-sm-0"><a href="Registrar.html"><img src="img/icons8-usuario-64.png" alt=""></a></button>
                         </nav>
                         </li>
-                    </header>
+                    </ul>
                 </ul>
             </nav>
         </section>
