--- a/Reserva.html
+++ b/Reserva.html
@@ -23,7 +23,7 @@
         <section>
             <nav id="menuinicio">
                 <ul class="menu-horizontal">
-                    <nav class="header">
+                    <ul class="header">
                         <li><a href="index.html">Inicio</a></li>
                         <li>
                             <a href="#">Menu</a>
@@ -37,7 +37,7 @@
                         <li><a href="Reserva.html">Reserva</a></li>
                         <nav class="inicioseccion">
                             <button class="btn btn-outline-success my-2 my-sm-0"><a href="Registrar.html"><img src="img/icons8-usuario-64.png" alt=""></a></button>
-                        </nav>
+                        </ul>
                         </li>
                     </nav>
                 </ul>
