--- a/Contacto.html
+++ b/Contacto.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Bootstrap -->    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,8 +56,8 @@
             <br>
             <br>
             <br>
-    <div class="container2">
-    <div class="panel panel-default">
+  <section>
+  <div class="container">
          <div class="panel-heading">
             <h3 class="panel-title">Formulario de Contacto</h3>
          </div>
@@ -110,31 +108,23 @@
                     <input type="submit" class="btn btn-primary" value="Enviar"/>
                 </div>
             </div>
-
         </form>
       </div>
    </div>
     </div>
-   <footer>
+  </section>
+  <footer>
     <nav id="RedesSociales">
         <br>
-    <h4>Redes Sociales</h4></a>
+    <h4>Redes Sociales</h4>
     <br>
-            <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section>
-            </a>
-            <a href="https://www.facebook.com/"><section><i class='bx bxl-facebook-square'></i>https://www.facebook.com/</section>
-            </a>
-            <a href="https://www.twitter.com/"><section><i class='bx bxl-twitter'></i>https://www.twitter.com/</section>
-            </a>
-            <a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><section><i class='bx bxs-location-plus'></i>https://www.googlemaps.</section>
-            </a>
-          </nav>
+    <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.instagram.com/"><img src="img/icons8-instagram-48.png" alt=""></a></button>
+    <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.facebook.com/"><img src="img/icons8-facebook-48.png" alt=""></a></button>
+    <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.twitter.com/"><img src="img/icons8-twitter-48.png" alt=""></a></button>
+    <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><img src="img/icons8-google-maps-48.png" alt=""></a></button>
+    </nav>
 </footer>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="formulario_jquery.js" ></script>
 <script src="js/formulario_jquery.js"></script>
 <script>  
