--- a/Registrar.html
+++ b/Registrar.html
@@ -128,20 +128,16 @@
     <section>
         <br>
         <footer>
-            <nav id="RedesSociales">
-                <br>
-            <h4>Redes Sociales</h4>
-            <br>
-                    <a href="https://www.instagram.com/"><section><i class='bx bxl-instagram-alt'></i>https://www.instagram.com/</section>
-                    </a>
-                    <a href="https://www.facebook.com/"><section><i class='bx bxl-facebook-square'></i>https://www.facebook.com/</section>
-                    </a>
-                    <a href="https://www.twitter.com/"><section><i class='bx bxl-twitter'></i>https://www.twitter.com/</section>
-                    </a>
-                    <a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><section><i class='bx bxs-location-plus'></i>https://www.googlemaps.</section>
-                    </a>
-                  </nav>
-        </footer>
+          <nav id="RedesSociales">
+              <br>
+          <h4>Redes Sociales</h4>
+          <br>
+          <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.instagram.com/"><img src="img/icons8-instagram-48.png" alt=""></a></button>
+          <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.facebook.com/"><img src="img/icons8-facebook-48.png" alt=""></a></button>
+          <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.twitter.com/"><img src="img/icons8-twitter-48.png" alt=""></a></button>
+          <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><img src="img/icons8-google-maps-48.png" alt=""></a></button>
+          </nav>
+      </footer>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
